package CA6;

public class Dashboard implements PlayerDataDetail {
    PlayerData playerData;

    @Override
    public void listen() {

    }
}
