package CA6;

public class PlayerData {
    int thoiGian,coolDown,grade;
}
